--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
+    "ng2-charts": "^2.4.2",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
+    "react-number-format": "^4.4.4",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
